# DSPy_demo_text_classification

./: .dockerignore  .editorconfig  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  api.py  config.py  diagnose.py  docker-compose.yml  dspy_modules.py  knowledge_base.py  main.py  pyproject.toml  quick_test.py  requirements-dev.txt  requirements-runtime.txt  requirements.txt  run.py  start.sh  test_setup.py  vector_store.py  wsgi.py
.github/workflows/: cd.yml  ci.yml
app/: __init__.py
app/agents/: __init__.py  classification_agent.py
app/controllers/: __init__.py  classification_controller.py
app/domain/: __init__.py  enums.py  errors.py
app/models/: __init__.py  classifier.py  optimizer.py  schemas.py
app/services/: __init__.py  dspy_service.py  knowledge_graph.py  text_analysis.py
app/static/css/: style.css
app/static/js/: app.js
app/templates/: index.html
app/views/: __init__.py  routes.py
chroma_db/: chroma.sqlite3
data/graph/: knowledge_graph.json
scripts/: build_knowledge_graph.py  download_conceptnet.py
tests/: conftest.py  test_agent.py  test_classifiers.py  test_config.py  test_controller.py  test_domain.py  test_dspy_service.py  test_knowledge_graph.py  test_optimizer.py  test_routes.py  test_schemas.py  test_settings.py  test_text_analysis.py
