[project]
name = "dspy-classifier"
version = "1.0.0"
description = "DSPy Text Classification Application with MVC Architecture"
requires-python = ">=3.11"
dependencies = [
    "dspy>=3.1.2",
    "python-dotenv>=1.0.0",
    "chromadb>=0.4.0",
    "flask>=3.0.0",
    "pydantic>=2.0.0",
    "gunicorn>=21.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
]
